crates/apollo-compiler/test_data/diagnostics/0019_enum_definition_with_duplicate_values.txt
Error: the enum value `CAT` is defined multiple times in the document
    ╭─[0019_enum_definition_with_duplicate_values.graphql:10:5]
    │
  7 │     CAT
    │     ─┬─  
    │      ╰─── previous definition of `CAT` here
    │ 
 10 │     CAT
    │     ─┬─  
    │      ╰─── `CAT` redefined here
    │ 
    │ Help: CAT must only be defined once in this enum.
────╯
Error: the enum value `THRIVE_PET_FOODS` is defined multiple times in the document
    ╭─[0019_enum_definition_with_duplicate_values.graphql:17:5]
    │
 14 │     THRIVE_PET_FOODS
    │     ────────┬───────  
    │             ╰───────── previous definition of `THRIVE_PET_FOODS` here
    │ 
 17 │     THRIVE_PET_FOODS
    │     ────────┬───────  
    │             ╰───────── `THRIVE_PET_FOODS` redefined here
    │ 
    │ Help: THRIVE_PET_FOODS must only be defined once in this enum.
────╯

